# learningOpenGL

./: BackgroundObject.cpp  BackgroundObject.h  CMakeLists.txt  ControlledObject.cpp  ControlledObject.h  Follower.cpp  Follower.h  GLM2SF.h  MainScene.cpp  MainScene.h  StandardColor.fragmentshader  StandardTexture.fragmentshader  main.cpp  readme.md  testLightProjection.scad
cmake_modules/: FindSFML.cmake
common/: shader.cpp
oge/: Camera.cpp  Camera.h  Light.cpp  Light.h  OGLObject.cpp  OGLObject.h  OGLSystem.cpp  OGLSystem.h  Scene.cpp  Scene.h
old shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  StandardColor.fragmentshader  StandardColor.vertexshader
resources/: CreateShadowMap.vertexshader  ShadowMappingColor.fragmentshader  ShadowMappingColor.vertexshader  ShadowMappingTexture.fragmentshader  ShadowMappingTexture.vertexshader  bath spout cover new.stl  myascii11stl.stl  myascii205.stl
